# renderer

./: CMakeLists.txt  compile-shader.ps1  prepare-resources.ps1
src/: CMakeLists.txt  invert.cpp  shader.slang
